Fixed position of clipboard container to prevent flickering on paste

--- a/assets/core.styl
+++ b/assets/core.styl
@@ -5,7 +5,7 @@
   font-family: Helvetica, Arial, sans-serif
   font-size: 13px
   height: 100%
-  margin: 0px
+  margin: 0
   position: relative
 
 .ql-container.ql-disabled
@@ -16,11 +16,10 @@
       pointer-events: none
 
 .ql-clipboard
-  left: -100000px
-  height: 1px
-  overflow-y: hidden
   position: absolute
-  top: 50%
+  width: 1px
+  height: 1px
+  overflow: hidden
   p
     margin: 0
     padding: 0
